--- a/plonetheme/teylersmuseum/browser/css/enhancements.css
+++ b/plonetheme/teylersmuseum/browser/css/enhancements.css
@@ -1,4 +1,11 @@
 /* ------------------------------------------------------------------------------
+    T E Y L E R S - F O N T S
+--------------------------------------------------------------------------------- */
+
+@import url('//fonts.googleapis.com/css?family=Merriweather:400,700,300italic');
+@import url('//fonts.googleapis.com/css?family=Raleway:400,700,800');
+
+/* ------------------------------------------------------------------------------
     E N H A N C E M E N T S
 --------------------------------------------------------------------------------- */
 
@@ -6,3 +13,5 @@
     display: none !important;
     visibility: none !important;
 }
+
+
