--- a/plonetheme/teylersmuseum/browser/css/menu.css
+++ b/plonetheme/teylersmuseum/browser/css/menu.css
@@ -20,22 +20,6 @@
 	cursor: pointer
 }
 
-.main_menu.open .menu-item {
-      background: #ffffff;
-}
-
-.main_menu.open .menu-item:first-child {
-	transform: translateY(0) rotate(45deg)
-}
-
-.main_menu.open .menu-item:nth-child(2) {
-	opacity: 0;
-}
-
-.main_menu.open .menu-item:nth-child(3) {
-	transform: translateY(0) rotate(-45deg)
-}
-
 .menu-item {
 	-webkit-transition-property: all;
 	transition-property: all;
@@ -268,18 +252,26 @@
 	height: 100%;
 	background: #fff;
 	content: '';
+	-ms-transition: transform 0.3s;
+	-moz-transition: transform 0.3s;
 	-webkit-transition: -webkit-transform 0.3s;
 	transition: transform 0.3s;
 }
 
 .bt-menu-trigger span:after {
+	-ms-transform: translateY(250%);
+	-moz-transform: translateY(250%);
 	-webkit-transform: translateY(250%);
 	transform: translateY(250%);
+	-o-transform: translateY(250%);
 }
 
 .bt-menu-trigger span:before {
+	-ms-transform: translateY(-250%);
+	-moz-transform: translateY(-250%);
 	-webkit-transform: translateY(-250%);
 	transform: translateY(-250%);
+	-o-transform: translateY(-250%);
 }
 
 .bt-menu-trigger.open span {
@@ -287,13 +279,19 @@
 }
 
 .bt-menu-trigger.open span:before {
+	-ms-transform: translateY(0) rotate(45deg);
+	-moz-transform: translateY(0) rotate(45deg);
 	-webkit-transform: translateY(0) rotate(45deg);
 	transform: translateY(0) rotate(45deg);
+	-o-transform: translateY(0) rotate(45deg);
 }
 
 .bt-menu-trigger.open span:after {
+	-ms-transform: translateY(0) rotate(-45deg);
+	-moz-transform: translateY(0) rotate(-45deg);
 	-webkit-transform: translateY(0) rotate(-45deg);
 	transform: translateY(0) rotate(-45deg);
+	-o-transform: translateY(0) rotate(-45deg);
 }
 
 
